[package]
authors = ["Maxime Augier <max@xolus.net>"]
edition = "2018"
name = "rasta"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
futures = "0.3"
log = "0.4"
ring = "0.16"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots", "json"] }
siderite = { path = "../siderite" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.4", features = ["full"]}
fastrand = "1.4"
